# DebugLibC

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  colors.c  colors.h  config.mk  debug_c.c  debug_c.h  error_c.c  error_c.h  general.mk  hash.c  linux.mk  time_code.c  time_code.h  windows.mk
example/: hash.c
example/src/: debug_c.c
src/: debug_c.c  error_c.c  time_code.c
